--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-spring": "^8.0.27"
+    "react-spring": "^9.0.0-rc.3"
   },
   "scripts": {
     "start": "react-scripts start",
